# nx-bazel-example

./: .bazelrc  BUILD.bazel  README.md  WORKSPACE  angular.json  nx.json  package.json  tsconfig.json
apps/myapp/: BUILD.bazel
apps/myapp-e2e/: BUILD.bazel
apps/myapp-e2e/src/: app.e2e-spec.ts  app.po.ts
apps/myapp/src/: index.html
apps/myapp/src/app/: app.component.html  app.component.ts  app.module.ts
libs/my-lib/: BUILD.bazel  tslint.json
libs/ng-lib/: BUILD.bazel  karma.conf.js  package.json
tools/schematics/bazel-init/: index.ts
tools/schematics/bazel-sync/: index.ts
tools/schematics/bazel-sync/files/workspace-file/: WORKSPACE__tmpl__
